test/zinc_source/compile_errors/structs/15_infer_constraint_failure.zn
// expected-error: struct 'Pair' constraint failed: ain\[bool\]

#[a in [bool]]
struct Pair {
    a: infer
}

fn main() {
    bad = Pair { a: "nope" }
    print(type(bad).name)
}
